# desarrollo-proyecto-signalForHelp-backend

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/services/: yolo_service.py
app/utils/: proto_definitions.proto
tests/: test_health.py  test_yolo_routes.py
