[project]
name = "desarrollo-proyecto-signalforhelp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "grpcio>=1.74.0",
    "grpcio-tools>=1.74.0",
    "httpx>=0.28.1",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "pytest>=8.4.2",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.199",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
